feat(ai)@CodeBuddy: 统一抽象层演进。system 提升为 ChatRequest 顶层字段（Message 移除 SYSTEM 角色，Anthropic/Gemini 直映射、OpenAI/DeepSeek 合成 system 消息）；Message.toolResult 支持多模态内容块（Anthropic 无损翻译 text/image）；apiKind 改名 apiSchema；删除 ChatClient.ask()；新增 ToolClient 标记接口，补全 Anthropic/Gemini 工具与 JSON 能力；配套协议单测与实时流式测试.